--- a/compendium/specializations.html
+++ b/compendium/specializations.html
@@ -104,7 +104,7 @@
 
 <p>If you re-specialize back to a previously-held specialization, your rank will be retained. That is, you will never lose ranks you have earned for a given specialization.</p>
 
-<h2 id="warrior-specializations">Warrior Specializations</h2>
+<h2 id="warrior-specializations"><img src="/assets/img/weapons/silver sword.gif" alt="" width="32px" style="vertical-align: unset; margin-right: 0.5rem;" />Warrior Specializations</h2>
 
 <table>
   <thead>
@@ -116,29 +116,29 @@
   </thead>
   <tbody>
     <tr>
-      <td>Flame Knight</td>
+      <td><img src="/assets/img/weapons/flametongue.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Flame Knight</td>
       <td>Regular attacks are imbued with fire</td>
       <td>+2% fire reduction</td>
     </tr>
     <tr>
-      <td>Reckless Lancer</td>
+      <td><img src="/assets/img/weapons/glaive.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Reckless Lancer</td>
       <td>50% accuracy, 200% spear damage</td>
       <td>+2 damage</td>
     </tr>
     <tr>
-      <td>Stalwart Slayer</td>
+      <td><img src="/assets/img/weapons/heavy mace.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Stalwart Slayer</td>
       <td>0% crit chance, 300% damage</td>
       <td>+2 strength</td>
     </tr>
     <tr>
-      <td>Executioner</td>
+      <td><img src="/assets/img/weapons/giant axe.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Executioner</td>
       <td>300% axe crit damage</td>
       <td>+2 dexterity</td>
     </tr>
   </tbody>
 </table>
 
-<h2 id="archer-specializations">Archer Specializations</h2>
+<h2 id="archer-specializations"><img src="/assets/img/weapons/eucalyptus bow.gif" alt="" width="32px" style="vertical-align: unset; margin-right: 0.25em;" />Archer Specializations</h2>
 
 <table>
   <thead>
@@ -150,29 +150,29 @@
   </thead>
   <tbody>
     <tr>
-      <td>Swift Sharpshooter</td>
+      <td><img src="/assets/img/weapons/ash bow.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Swift Sharpshooter</td>
       <td>Accuracy above 100% gives a chance to attack multiple times</td>
       <td>+2% accuracy</td>
     </tr>
     <tr>
-      <td>Soul Sniper</td>
+      <td><img src="/assets/img/weapons/oak bow.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Soul Sniper</td>
       <td>Critical strikes restore 50 EP</td>
       <td>+0.5% crit chance</td>
     </tr>
     <tr>
-      <td>Headshot Hunter</td>
+      <td><img src="/assets/img/weapons/birch bow.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Headshot Hunter</td>
       <td>500% final damage if attack is fatal, otherwise attack with 10% accuracy</td>
       <td>+5% crit damage</td>
     </tr>
     <tr>
-      <td>Skulker</td>
+      <td><img src="/assets/img/armour/shadow mail.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Skulker</td>
       <td>10% chance to hide after each turn</td>
       <td>+1% elemental reductions</td>
     </tr>
   </tbody>
 </table>
 
-<h2 id="mage-specializations">Mage Specializations</h2>
+<h2 id="mage-specializations"><img src="/assets/img/weapons/impwood wand.gif" alt="" width="32px" style="vertical-align: unset; margin-right: 0.25em;" />Mage Specializations</h2>
 
 <table>
   <thead>
@@ -184,29 +184,29 @@
   </thead>
   <tbody>
     <tr>
-      <td>Blaze Mage</td>
+      <td><img src="/assets/img/armour/bloodfire cloak.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Blaze Mage</td>
       <td>200% final fire damage</td>
       <td>+2 wand power</td>
     </tr>
     <tr>
-      <td>Stone Sage</td>
+      <td><img src="/assets/img/armour/sacredvine cloak.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Stone Sage</td>
       <td>200% final earth damage</td>
       <td>+1% block chance</td>
     </tr>
     <tr>
-      <td>Snow Sorcerer</td>
+      <td><img src="/assets/img/armour/wizardmist cloak.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Snow Sorcerer</td>
       <td>200% final water damage</td>
       <td>+2 wisdom</td>
     </tr>
     <tr>
-      <td>Mystic</td>
+      <td><img src="/assets/img/armour/magerobe.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Mystic</td>
       <td><em>Defend</em> is replaced by <em>Re-energize</em></td>
       <td>+1% physical reduction</td>
     </tr>
   </tbody>
 </table>
 
-<h2 id="ranger-specializations">Ranger Specializations</h2>
+<h2 id="ranger-specializations"><img src="/assets/img/armour/steel hauberk.gif" alt="" width="32px" style="vertical-align: unset; margin-right: 0.25em;" />Ranger Specializations</h2>
 
 <table>
   <thead>
@@ -218,29 +218,29 @@
   </thead>
   <tbody>
     <tr>
-      <td>Guardian</td>
+      <td><img src="/assets/img/shields/embossed tower shield.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Guardian</td>
       <td>Adrenaline rushes restore HP too</td>
       <td>+2 defence</td>
     </tr>
     <tr>
-      <td>Defender</td>
+      <td><img src="/assets/img/shields/steel defender.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Defender</td>
       <td>20% chance to parry a physical hit</td>
       <td>+3% base block chance</td>
     </tr>
     <tr>
-      <td>Son/Daughter of Centaur</td>
+      <td><img src="/assets/img/weapons/alder bow.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Son/Daughter of Centaur</td>
       <td>5% chance to become enraged when hit</td>
       <td>+1% power</td>
     </tr>
     <tr>
-      <td>Scallywag</td>
+      <td><img src="/assets/img/shields/waterproof buckler.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Scallywag</td>
       <td>Shields and bows can be equipped together, but take your turn after the enemy</td>
       <td>+0.5% water reduction per accuracy point above 100%</td>
     </tr>
   </tbody>
 </table>
 
-<h2 id="monk-specializations">Monk Specializations</h2>
+<h2 id="monk-specializations"><img src="/assets/img/shields/rock shield.gif" alt="" width="32px" style="vertical-align: unset; margin-right: 0.25em;" />Monk Specializations</h2>
 
 <table>
   <thead>
@@ -252,29 +252,29 @@
   </thead>
   <tbody>
     <tr>
-      <td>Adrenal Avenger</td>
+      <td><img src="/assets/img/weapons/merciless dagger.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Adrenal Avenger</td>
       <td>250% final damage at half HP or below</td>
       <td>+3% base crit chance</td>
     </tr>
     <tr>
-      <td>Astral Assailant</td>
+      <td><img src="/assets/img/weapons/fluorophoric dagger.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Astral Assailant</td>
       <td>Enemy reduction of a given element is halved against attacks using a weapon imbued with that element</td>
       <td>+2 power</td>
     </tr>
     <tr>
-      <td>Sandman/Sphinxkin</td>
+      <td><img src="/assets/img/weapons/wand of kosovo.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Sandman/Sphinxkin</td>
       <td>Regular attacks have a 25% chance to reduce enemy accuracy by 10% of their current accuracy</td>
       <td>+3% earth reduction</td>
     </tr>
     <tr>
-      <td>Hermit</td>
+      <td><img src="/assets/img/armour/iron cuirass.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Hermit</td>
       <td>200% defence</td>
       <td>+20 EP</td>
     </tr>
   </tbody>
 </table>
 
-<h2 id="druid-specializations">Druid Specializations</h2>
+<h2 id="druid-specializations"><img src="/assets/img/armour/gemmed habiliment.gif" alt="" width="32px" style="vertical-align: unset; margin-right: 0.25em;" />Druid Specializations</h2>
 
 <table>
   <thead>
@@ -286,29 +286,29 @@
   </thead>
   <tbody>
     <tr>
-      <td>Spirit Seer</td>
+      <td><img src="/assets/img/armour/embroidered cloths.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Spirit Seer</td>
       <td>20% chance to restore 20 EP after each turn</td>
       <td>+10% XP</td>
     </tr>
     <tr>
-      <td>Weird Warlock</td>
+      <td><img src="/assets/img/armour/arcane vestment.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Weird Warlock</td>
       <td>10% chance to use a random skill instead of regular attack</td>
       <td>+2 bow and wand power</td>
     </tr>
     <tr>
-      <td>Critical Caster</td>
+      <td><img src="/assets/img/weapons/avadavra wand.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Critical Caster</td>
       <td>100% crit chance, 0% base accuracy</td>
       <td>+3% base crit damage</td>
     </tr>
     <tr>
-      <td>Magic Marksman</td>
+      <td><img src="/assets/img/weapons/pine bow.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Magic Marksman</td>
       <td>Damage is calculated based on dexterity and wisdom</td>
       <td>+2 bow power</td>
     </tr>
   </tbody>
 </table>
 
-<h2 id="omnibus-specializations">Omnibus Specializations</h2>
+<h2 id="omnibus-specializations"><img src="/assets/img/shields/luminescent barrier.gif" alt="" width="32px" style="vertical-align: unset; margin-right: 0.25em;" />Omnibus Specializations</h2>
 
 <table>
   <thead>
@@ -320,22 +320,22 @@
   </thead>
   <tbody>
     <tr>
-      <td>Squad Leader</td>
+      <td><img src="/assets/img/weapons/espadon.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Squad Leader</td>
       <td>Always attack first</td>
       <td>+1 all stats</td>
     </tr>
     <tr>
-      <td>Paladin</td>
+      <td><img src="/assets/img/armour/glowing mail.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Paladin</td>
       <td>Gain 1 extra stat point per level</td>
       <td>+20 HP</td>
     </tr>
     <tr>
-      <td>Vengeful Vigilante</td>
+      <td><img src="/assets/img/weapons/flail.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Vengeful Vigilante</td>
       <td>50% chance to retaliate when an ally is targeted</td>
       <td>+2% power</td>
     </tr>
     <tr>
-      <td>Alchemist</td>
+      <td><img src="/assets/img/armour/white robe.gif" alt="" width="20px" style="vertical-align: unset; margin-right: 0.5rem;" />Alchemist</td>
       <td>1000% healing from potions</td>
       <td>+20% euros</td>
     </tr>
