--- a/how-to-play.html
+++ b/how-to-play.html
@@ -64,9 +64,7 @@
 <h2 id="advanced">Advanced</h2>
 
 <ul>
-  <li><a href="/compendium/guide">Detailed Game Guide</a></li>
-  <li><a href="/compendium/forge">Forge Guide</a></li>
-  <li><a href="/compendium/specializations">Specialization Guide</a></li>
+  <li><a href="/compendium/guides">Detailed Game Guides in the Compendium</a></li>
 </ul>
 
   </div>
