--- a/compendium.html
+++ b/compendium.html
@@ -37,7 +37,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/compendium/guides">Guides</a><a class="page-link" href="/compendium/weapons">Weapons</a><a class="page-link" href="/compendium/armour">Armour</a><a class="page-link" href="/compendium/shields">Shields</a><a class="page-link" href="/compendium/miscellaneous">Items</a><a class="page-link" href="/compendium/skills">Skills</a><a class="page-link" href="/compendium/enemies">Enemies</a></div>
+        <div class="trigger"><a class="page-link" href="/compendium/world-map">Map</a><a class="page-link" href="/compendium/guides">Guides</a><a class="page-link" href="/compendium/weapons">Weapons</a><a class="page-link" href="/compendium/armour">Armour</a><a class="page-link" href="/compendium/shields">Shields</a><a class="page-link" href="/compendium/miscellaneous">Items</a><a class="page-link" href="/compendium/skills">Skills</a><a class="page-link" href="/compendium/enemies">Enemies</a></div>
       </nav></div>
 </header><main class="page-content" aria-label="Content">
       <div class="wrapper">
@@ -82,7 +82,7 @@ src="/assets/img/other/marija.gif" alt="Marija" style="border-radius: 100%; marg
 
 <h2>
   Sections
-</h2><ul><li><a class="page-link" href="/compendium/guides">Guides</a></li><li><a class="page-link" href="/compendium/weapons">Weapons</a></li><li><a class="page-link" href="/compendium/armour">Armour</a></li><li><a class="page-link" href="/compendium/shields">Shields</a></li><li><a class="page-link" href="/compendium/miscellaneous">Miscellaneous Items</a></li><li><a class="page-link" href="/compendium/skills">Skills</a></li><li><a class="page-link" href="/compendium/enemies">Enemies</a></li></ul><a href="/">← Return to the main site</a>
+</h2><ul><li><a class="page-link" href="/compendium/world-map">World Map</a></li><li><a class="page-link" href="/compendium/guides">Guides</a></li><li><a class="page-link" href="/compendium/weapons">Weapons</a></li><li><a class="page-link" href="/compendium/armour">Armour</a></li><li><a class="page-link" href="/compendium/shields">Shields</a></li><li><a class="page-link" href="/compendium/miscellaneous">Miscellaneous Items</a></li><li><a class="page-link" href="/compendium/skills">Skills</a></li><li><a class="page-link" href="/compendium/enemies">Enemies</a></li></ul><a href="/">← Return to the main site</a>
 
           </div>
 
