--- a/compendium/guide.html
+++ b/compendium/guide.html
@@ -104,6 +104,8 @@
 
 <h2 id="stats">Stats</h2>
 
+<p><img src="/assets/img/guide/stats.png" alt="Game screen stat locations" /></p>
+
 <p>Stats can be grouped into <a href="#vital-stats">vital stats</a>, <a href="#primary-stats">primary stats</a> and <a href="#secondary-stats">secondary stats</a>.</p>
 
 <ul>
@@ -451,6 +453,8 @@
 
 <h2 id="items">Items</h2>
 
+<p><img src="/assets/img/guide/items.png" alt="Game screen stat locations" /></p>
+
 <p>Items serve a variety of purposes from boosting stats to providing access to new locations. Items can be grouped into <a href="#equipment">equipment</a> and <a href="#miscellaneous-items">miscellaneous items</a>.</p>
 
 <p>You may carry up to <em>9</em> items, unless you have the <span class="compendium-link"><a href="miscellaneous#chasmic-rucksack">Chasmic Rucksack</a></span>, which allows you to carry up to <em>16</em>.</p>
@@ -600,6 +604,8 @@
 <hr />
 
 <h2 id="skills">Skills</h2>
+
+<p><img src="/assets/img/guide/skills.png" alt="Game screen stat locations" /></p>
 
 <p>Most <span class="compendium-link"><a href="skills">skills</a></span> require a certain weapon type to be equipped in order to use them in <a href="#battle">battle</a>. Skills consume EP when used.</p>
 
@@ -868,6 +874,8 @@
 <hr />
 
 <h2 id="battle">Battle</h2>
+
+<p><img src="/assets/img/guide/battle.png" alt="Game screen stat locations" /></p>
 
 <p>Battles may occur randomly while travelling, or as a result of events that happen.</p>
 
