--- a/compendium/guide.html
+++ b/compendium/guide.html
@@ -498,92 +498,97 @@
 
 <p>Sometimes an enemy will drop a piece of equipment with a modifier (prefix). This is a regular piece of equipment with an additional enhancement.</p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Modifier Name</th>
-      <th>Stat Enhanced</th>
-      <th>Enhancement Amount</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Exotic</td>
-      <td>Sell price</td>
-      <td>+100% to +300%</td>
-    </tr>
-    <tr>
-      <td>Big</td>
-      <td>Power</td>
-      <td>+2 to +4</td>
-    </tr>
-    <tr>
-      <td>Keen</td>
-      <td>Critical chance</td>
-      <td>+1% to +2%</td>
-    </tr>
-    <tr>
-      <td>Stony</td>
-      <td>Earth reduction</td>
-      <td>+2% to +4%</td>
-    </tr>
-    <tr>
-      <td>Icy</td>
-      <td>Water reduction</td>
-      <td>+2% to +4%</td>
-    </tr>
-    <tr>
-      <td>Fiery</td>
-      <td>Fire reduction</td>
-      <td>+2% to +4%</td>
-    </tr>
-    <tr>
-      <td>Sturdy</td>
-      <td>Defence</td>
-      <td>+2 to +4</td>
-    </tr>
-    <tr>
-      <td>Heavy</td>
-      <td>Block chance</td>
-      <td>+1% to +2%</td>
-    </tr>
-    <tr>
-      <td>Giant</td>
-      <td>Power</td>
-      <td>+4 to +8</td>
-    </tr>
-    <tr>
-      <td>Deadly</td>
-      <td>Critical chance</td>
-      <td>+2% to +4%</td>
-    </tr>
-    <tr>
-      <td>Gaian</td>
-      <td>Earth reduction</td>
-      <td>+4% to +8%</td>
-    </tr>
-    <tr>
-      <td>Glacial</td>
-      <td>Water reduction</td>
-      <td>+4% to +8%</td>
-    </tr>
-    <tr>
-      <td>Molten</td>
-      <td>Fire reduction</td>
-      <td>+4% to +8%</td>
-    </tr>
-    <tr>
-      <td>Robust</td>
-      <td>Defence</td>
-      <td>+4 to +8</td>
-    </tr>
-    <tr>
-      <td>Massive</td>
-      <td>Block chance</td>
-      <td>+2% to +4%</td>
-    </tr>
-  </tbody>
-</table>
+<details>
+  <summary><em>What are the different modifiers?</em></summary>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Modifier Name</th>
+        <th>Stat Enhanced</th>
+        <th>Enhancement Amount</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Exotic</td>
+        <td>Sell price</td>
+        <td>+100% to +300%</td>
+      </tr>
+      <tr>
+        <td>Big</td>
+        <td>Power</td>
+        <td>+2 to +4</td>
+      </tr>
+      <tr>
+        <td>Keen</td>
+        <td>Critical chance</td>
+        <td>+1% to +2%</td>
+      </tr>
+      <tr>
+        <td>Stony</td>
+        <td>Earth reduction</td>
+        <td>+2% to +4%</td>
+      </tr>
+      <tr>
+        <td>Icy</td>
+        <td>Water reduction</td>
+        <td>+2% to +4%</td>
+      </tr>
+      <tr>
+        <td>Fiery</td>
+        <td>Fire reduction</td>
+        <td>+2% to +4%</td>
+      </tr>
+      <tr>
+        <td>Sturdy</td>
+        <td>Defence</td>
+        <td>+2 to +4</td>
+      </tr>
+      <tr>
+        <td>Heavy</td>
+        <td>Block chance</td>
+        <td>+1% to +2%</td>
+      </tr>
+      <tr>
+        <td>Giant</td>
+        <td>Power</td>
+        <td>+4 to +8</td>
+      </tr>
+      <tr>
+        <td>Deadly</td>
+        <td>Critical chance</td>
+        <td>+2% to +4%</td>
+      </tr>
+      <tr>
+        <td>Gaian</td>
+        <td>Earth reduction</td>
+        <td>+4% to +8%</td>
+      </tr>
+      <tr>
+        <td>Glacial</td>
+        <td>Water reduction</td>
+        <td>+4% to +8%</td>
+      </tr>
+      <tr>
+        <td>Molten</td>
+        <td>Fire reduction</td>
+        <td>+4% to +8%</td>
+      </tr>
+      <tr>
+        <td>Robust</td>
+        <td>Defence</td>
+        <td>+4 to +8</td>
+      </tr>
+      <tr>
+        <td>Massive</td>
+        <td>Block chance</td>
+        <td>+2% to +4%</td>
+      </tr>
+    </tbody>
+  </table>
+
+</details>
 
 <h3 id="miscellaneous-items">Miscellaneous Items</h3>
 
