--- a/shortcuts.html
+++ b/shortcuts.html
@@ -90,6 +90,10 @@
       <td><span class="game-text" title="Toggle Mission Log">Mission Log <img src="/assets/img/icons/mission log.gif" alt="Log Book" /></span></td>
       <td>Q</td>
     </tr>
+    <tr>
+      <td><img src="/assets/img/icons/map.gif" alt="Map" title="Open the world map" />/<span class="game-text" title="Close the world map">Return</span></td>
+      <td>M</td>
+    </tr>
   </tbody>
 </table>
 
