--- a/compendium.html
+++ b/compendium.html
@@ -75,9 +75,9 @@
     }
   });
 </script><span style="float: right;">
-  <img srcset="/assets/img/other/marija.gif 2w, /assets/img/other/marija.gif 1w"
+  <img class="decorative-circle" srcset="/assets/img/other/marija.gif 2w, /assets/img/other/marija.gif 1w"
 sizes="(min-resolution: 2x) 1px, 2px"
-src="/assets/img/other/marija.gif" alt="Marija" style="border-radius: 100%; margin-top: 30px;" />
+src="/assets/img/other/marija.gif" alt="Marija" style="margin-top: 30px;" />
 </span>
 
 <h2>
