--- a/compendium/forge.html
+++ b/compendium/forge.html
@@ -173,7 +173,7 @@
 
 <h3 id="modifiers">Modifiers</h3>
 
-<p>Sacrificed equipment with a <a href="guide#modified-equipment">modifier prefix</a> in its name will provide an additional enhancement based on prefix name, but only if it’s the same kind of equipment as forged.</p>
+<p>Sacrificed equipment with a <span class="compendium-link"><a href="guide#modified-equipment">modifier prefix</a></span> in its name will provide an additional enhancement based on prefix name, but only if it’s the same kind of equipment as forged.</p>
 
 <h2 id="forms">Forms</h2>
 
@@ -234,39 +234,39 @@
     </tr>
     <tr>
       <td>20</td>
-      <td><a href="/compendium/miscellaneous#ranine-orb">Ranine Orb</a></td>
+      <td><span class="compendium-link"><a href="/compendium/miscellaneous#ranine-orb">Ranine Orb</a></span></td>
     </tr>
     <tr>
       <td>30</td>
-      <td><a href="/compendium/miscellaneous#bulbous-orb">Bulbous Orb</a></td>
+      <td><span class="compendium-link"><a href="/compendium/miscellaneous#bulbous-orb">Bulbous Orb</a></span></td>
     </tr>
     <tr>
       <td>40</td>
-      <td><a href="/compendium/miscellaneous#fiery-orb">Fiery Orb</a></td>
+      <td><span class="compendium-link"><a href="/compendium/miscellaneous#fiery-orb">Fiery Orb</a></span></td>
     </tr>
     <tr>
       <td>50</td>
-      <td><a href="/compendium/miscellaneous#platinum-ball">Platinum Ball</a></td>
+      <td><span class="compendium-link"><a href="/compendium/miscellaneous#platinum-ball">Platinum Ball</a></span></td>
     </tr>
     <tr>
       <td>60</td>
-      <td><a href="/compendium/miscellaneous#wizardly-orb">Wizardly Orb</a></td>
+      <td><span class="compendium-link"><a href="/compendium/miscellaneous#wizardly-orb">Wizardly Orb</a></span></td>
     </tr>
     <tr>
       <td>70</td>
-      <td><a href="/compendium/miscellaneous#knightly-orb">Knightly Orb</a></td>
+      <td><span class="compendium-link"><a href="/compendium/miscellaneous#knightly-orb">Knightly Orb</a></span></td>
     </tr>
     <tr>
       <td>80</td>
-      <td><a href="/compendium/miscellaneous#feline-orb">Feline Orb</a></td>
+      <td><span class="compendium-link"><a href="/compendium/miscellaneous#feline-orb">Feline Orb</a></span></td>
     </tr>
     <tr>
       <td>90</td>
-      <td><a href="/compendium/miscellaneous#gumball-of-power">Gumball of Power</a></td>
+      <td><span class="compendium-link"><a href="/compendium/miscellaneous#gumball-of-power">Gumball of Power</a></span></td>
     </tr>
     <tr>
       <td>100</td>
-      <td><a href="/compendium/miscellaneous#purple-horn">Purple Horn</a></td>
+      <td><span class="compendium-link"><a href="/compendium/miscellaneous#purple-horn">Purple Horn</a></span></td>
     </tr>
   </tbody>
 </table>
