--- a/compendium/guide.html
+++ b/compendium/guide.html
@@ -404,7 +404,7 @@
       <td>Dexterity</td>
       <td>Bow</td>
       <td>Accuracy, critical chance, block chance</td>
-      <td>Gain access to more <span class="internal-link"><a href="nymph-nodes">nymph nodes</a></span>.</td>
+      <td>Gain access to more <span class="compendium-link"><a href="nymph-nodes">nymph-nodes</a></span>.</td>
     </tr>
     <tr>
       <td>Wisdom</td>
