--- a/compendium/specializations.html
+++ b/compendium/specializations.html
@@ -101,7 +101,7 @@
 
 <h2 id="overview">Overview</h2>
 
-<p>After defeating <a href="/compendium/enemies#riplin"><em>Riplin</em></a> and absorbing the power of the <a href="/compendium/miscellaneous#ominous-orb"><em>Ominous Orb</em></a> in the Hidden Passage altar, you may take on one of four specializations. The four specializations for which you qualify depend on your <a href="/classes">class</a>.</p>
+<p>After defeating <span class="compendium-link"><a href="/compendium/enemies#riplin"><em>Riplin</em></a></span> and absorbing the power of the <span class="compendium-link"><a href="/compendium/miscellaneous#ominous-orb"><em>Ominous Orb</em></a></span> in the Hidden Passage altar, you may take on one of four specializations. The four specializations for which you qualify depend on your <span class="internal-link"><a href="/classes">class</a></span>.</p>
 
 <h3 id="perks-and-bonuses">Perks and Bonuses</h3>
 
