--- a/compendium/guides.html
+++ b/compendium/guides.html
@@ -95,6 +95,14 @@
   <li><a href="specializations">Specializations</a></li>
 </ul>
 
+<h2 id="miscellaneous-pages">Miscellaneous Pages</h2>
+
+<ul>
+  <li><a href="nymph-nodes">Nymph-Nodes</a></li>
+  <li><span class="internal-link"><a href="/shortcuts">Shortcuts</a></span></li>
+  <li><span class="internal-link"><a href="/classes">Classes</a></span></li>
+</ul>
+
           </div>
 
         </article>
