--- a/how-to-play.html
+++ b/how-to-play.html
@@ -64,7 +64,7 @@
 <h2 id="advanced">Advanced</h2>
 
 <ul>
-  <li><a href="/compendium/guides">Detailed Game Guides in the Compendium</a></li>
+  <li><a href="/compendium/guides">The Compendium: Guides</a></li>
 </ul>
 
   </div>
