--- a/compendium/specializations.html
+++ b/compendium/specializations.html
@@ -8,16 +8,16 @@
 <meta property="og:title" content="Specializations" />
 <meta name="author" content="Ben Gardner" />
 <meta property="og:locale" content="en_US" />
-<link rel="canonical" href="http://localhost:4000/compendium/specializations" />
-<meta property="og:url" content="http://localhost:4000/compendium/specializations" />
+<link rel="canonical" href="https://toshesquest.com/compendium/specializations" />
+<meta property="og:url" content="https://toshesquest.com/compendium/specializations" />
 <meta property="og:site_name" content="Toshe’s Quest" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Specializations" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Ben Gardner"},"headline":"Specializations","url":"http://localhost:4000/compendium/specializations"}</script>
+{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Ben Gardner"},"headline":"Specializations","url":"https://toshesquest.com/compendium/specializations"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Toshe&apos;s Quest" /><link rel="stylesheet" href="/assets/css/my-style.css">
+<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://toshesquest.com/feed.xml" title="Toshe&apos;s Quest" /><link rel="stylesheet" href="/assets/css/my-style.css">
 <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
