--- a/shortcuts.html
+++ b/shortcuts.html
@@ -59,39 +59,39 @@
   </thead>
   <tbody>
     <tr>
-      <td><img src="/assets/img/icons/save.gif" alt="Hard Disk" title="Save your game" /></td>
+      <td><img src="/assets/img/icons/save.gif" alt="Hard Disk" title="Save your game" class="pixel-art" /></td>
       <td>Ctrl + S</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/music.gif" alt="Eighth Note" title="Toggle background music" /></td>
+      <td><img src="/assets/img/icons/music.gif" alt="Eighth Note" title="Toggle background music" class="pixel-art" /></td>
       <td>Ctrl + M</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/sfx.gif" alt="Two Eighth Notes" title="Toggle sound effects" /></td>
+      <td><img src="/assets/img/icons/sfx.gif" alt="Two Eighth Notes" title="Toggle sound effects" class="pixel-art" /></td>
       <td>Ctrl + ,</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/inventory.gif" alt="Body Armour" title="View inventory" /></td>
+      <td><img src="/assets/img/icons/inventory.gif" alt="Body Armour" title="View inventory" class="pixel-art" /></td>
       <td>I</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/back.gif" alt="Back Arrow" title="Go back" /></td>
+      <td><img src="/assets/img/icons/back.gif" alt="Back Arrow" title="Go back" class="pixel-art" /></td>
       <td>I</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/cancel.gif" alt="X" title="Cancel" /></td>
+      <td><img src="/assets/img/icons/cancel.gif" alt="X" title="Cancel" class="pixel-art" /></td>
       <td>X</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/potion.gif" alt="Potion" title="Drink a vial of life fluid" /></td>
+      <td><img src="/assets/img/icons/potion.gif" alt="Potion" title="Drink a vial of life fluid" class="pixel-art" /></td>
       <td>P</td>
     </tr>
     <tr>
-      <td><span class="game-text" title="Toggle Mission Log">Mission Log <img src="/assets/img/icons/mission log.gif" alt="Log Book" /></span></td>
+      <td><span class="game-text" title="Toggle Mission Log">Mission Log <img src="/assets/img/icons/mission log.gif" alt="Log Book" class="pixel-art" /></span></td>
       <td>Q</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/map.gif" alt="Map" title="Open the world map" />/<span class="game-text" title="Close the world map">Return</span></td>
+      <td><img src="/assets/img/icons/map.gif" alt="Map" title="Open the world map" class="pixel-art" />/<span class="game-text" title="Close the world map">Return</span></td>
       <td>M</td>
     </tr>
   </tbody>
@@ -108,19 +108,19 @@
   </thead>
   <tbody>
     <tr>
-      <td><img src="/assets/img/icons/up.gif" alt="Up Arrow" title="Move up" /></td>
+      <td><img src="/assets/img/icons/up.gif" alt="Up Arrow" title="Move up" class="pixel-art" /></td>
       <td>W</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/left.gif" alt="Left Arrow" title="Move left" /></td>
+      <td><img src="/assets/img/icons/left.gif" alt="Left Arrow" title="Move left" class="pixel-art" /></td>
       <td>A</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/down.gif" alt="Down Arrow" title="Move down" /></td>
+      <td><img src="/assets/img/icons/down.gif" alt="Down Arrow" title="Move down" class="pixel-art" /></td>
       <td>S</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/right.gif" alt="Right Arrow" title="Move right" /></td>
+      <td><img src="/assets/img/icons/right.gif" alt="Right Arrow" title="Move right" class="pixel-art" /></td>
       <td>D</td>
     </tr>
     <tr>
@@ -153,15 +153,15 @@
   </thead>
   <tbody>
     <tr>
-      <td><img src="/assets/img/icons/defend.gif" alt="Shield" title="Defend" /></td>
+      <td><img src="/assets/img/icons/defend.gif" alt="Shield" title="Defend" class="pixel-art" /></td>
       <td>J</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/attack.gif" alt="Sword" title="Attack" /></td>
+      <td><img src="/assets/img/icons/attack.gif" alt="Sword" title="Attack" class="pixel-art" /></td>
       <td>K</td>
     </tr>
     <tr>
-      <td><img src="/assets/img/icons/flee.gif" alt="Running Man" title="Try to run away" /></td>
+      <td><img src="/assets/img/icons/flee.gif" alt="Running Man" title="Try to run away" class="pixel-art" /></td>
       <td>L</td>
     </tr>
     <tr>
