--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/download">Download</a><a class="page-link" href="/how-to-play">How to Play</a><a class="page-link" href="/compendium">Compendium</a></div>
+        <div class="trigger"><a class="page-link" href="/download"><strong>Download</strong></a><a class="page-link" href="/how-to-play">How to Play</a><a class="page-link" href="/compendium">Compendium</a></div>
       </nav></div>
 </header><main class="page-content" aria-label="Content">
       <div class="wrapper">
@@ -59,9 +59,9 @@
 
 <p>We envisioned an alternate universe wherein Toshe is on a quest to save his beloved country. To do this, he has to reclaim the <em>Key to Macedonia</em>, facing unexpected challenges on the way.</p>
 
-<p><em>Toshe’s Quest</em> started as a high school project and evolved into something that has taken up an inordinate amount of my time.</p>
+<p>Toshe’s Quest started as a high school project and evolved into something that has taken up an inordinate amount of my time.</p>
 
-<p>Ten years of on-again, off-again work has finally fruited the third version of <em>Toshe’s Quest II</em>, available as a free <a href="/download">Windows download</a>.</p>
+<p>Ten years of on-again, off-again work has finally fruited the third version of Toshe’s Quest II, available as a free <a href="/download">Windows download</a>.</p>
 
 <hr />
 
@@ -69,7 +69,7 @@
 
 <p>When I was growing up, I liked using players’ guides to locate all the nooks and crannies and learn the intricacies of whatever game I was playing.</p>
 
-<p>The <a href="/compendium"><em>Toshe’s Quest</em> Compendium</a> exists to help keen players explore the game. If you’re more into self-discovery, you can do it that way too; the resource is entirely optional.</p>
+<p>The <a href="/compendium">Toshe’s Quest <em>Compendium</em></a> exists to help keen players explore the game. If you’re more into self-discovery, you can do it that way too; the resource is entirely optional.</p>
 
   </div><a class="u-url" href="/about" hidden></a>
 </article>
