--- a/index.html
+++ b/index.html
@@ -37,15 +37,23 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/download">Download</a><a class="page-link" href="/how-to-play">How to Play</a><a class="page-link" href="/compendium">Compendium</a></div>
+        <div class="trigger"><a class="page-link" href="/download"><strong>Download</strong></a><a class="page-link" href="/how-to-play">How to Play</a><a class="page-link" href="/compendium">Compendium</a></div>
       </nav></div>
 </header><main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p class="callout" style="float: right;">
-  ❓ <a href="about">What is Toshe's Quest?</a>
-</p>
+        <div class="home"><ul class="callout horizontal" style="margin-left: 0;">
+  <li>
+    <a href="download">Download Toshe's Quest II</a>
+  </li>
+  <li>
+    <a href="compendium">The Compendium</a>
+  </li>
+  <li>
+    <a href="about">What is Toshe's Quest?</a>
+  </li>
+</ul>
 
-<h1 style="overflow-wrap: normal;">News</h1>
+<h1 id="news">News</h1>
 
 
 
