--- a/index.html
+++ b/index.html
@@ -41,17 +41,25 @@
       </nav></div>
 </header><main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><ul class="callout horizontal" style="margin-left: 0;">
-  <li>
-    <a href="download">Download Toshe's Quest II</a>
-  </li>
-  <li>
-    <a href="compendium">The Compendium</a>
-  </li>
-  <li>
-    <a href="about">What is Toshe's Quest?</a>
-  </li>
-</ul>
+        <div class="home"><div style="text-align: center;">
+  <h1 class="large-screens-only"><a href="https://yaouw.itch.io/toshes-quest-ii"><img class="hover-highlight" src="/assets/img/play.png" alt="Play Toshe's Quest II" /></a></h1>
+
+  <ul class="callout horizontal" style="margin-left: 0;">
+    <strong>
+      <li>
+        <a href="download">Download Toshe's Quest II</a>
+      </li>
+      <li>
+        <a href="compendium">The Compendium</a>
+      </li>
+      <li>
+        <a href="about">What is Toshe's Quest?</a>
+      </li>
+    </strong>
+  </ul>
+</div>
+
+<hr />
 
 <h1 id="news">News</h1>
 
