--- a/compendium/guide.html
+++ b/compendium/guide.html
@@ -857,7 +857,7 @@
     <tr>
       <td>Poison</td>
       <td>100% chance to be <em>poisoned</em></td>
-      <td>Take damage equal to approximately 2% of your max HP each turn.<details markdown=1><summary class="small-text"><em>Special case for rare enemies</em></summary><p><span id="poison-on-rare-enemies">Poisoned <a href="#rare-enemies"><em>rare enemies</em></a> have a 20% chance to be cured each turn and cannot take poison damage if their HP is below 10% of their max HP</span></p></details></td>
+      <td>Take damage equal to approximately 2% of your max HP each turn.<details markdown=1><summary class="small-text"><em>Special case for rare enemies</em></summary><p><span id="poison-on-rare-enemies">Poisoned <a href="#rare-enemies"><em>rare enemies</em></a> have a 20% chance to be cured each turn and cannot take poison damage if their HP is below 10% of their max HP.</span></p></details></td>
     </tr>
     <tr>
       <td>Water</td>
